[project]
name = "Hypersonic"
version = "0.1.0"
description = "Hypersonic AI challenge"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "embasp-python>=8.1.3",
    "flake8>=7.2.0",
    "pygame>=2.6.1",
]

[project.urls]
Homepage = "https://github.com/ormai/hypersonic"
Issues = "https://github.com/ormai/hypersonic/issues"
